[package]
name = "sat_micro_bin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.2", features = ["cargo"] }
log = "^0.4"
simplelog = "^0.12"
rayon = "^1.5"
sat_micro = { path = "../sat_micro" }