[package]
name = "test_all"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "^0.4"
flate2 = "^1.0"
reqwest = { version = "^0.11", features = ["blocking"] }
log = "^0.4"
simplelog = "^0.12"
error-chain = "^0.12"
rayon = "^1.5"
indicatif = "^0.17"
clap = "^3.2"